# k8s-deploy-workflow

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  README.md  onprem-llm-k8s-manifest-preanalysis-workflow.md  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: context-validate.yml
.husky/: pre-push
.superpowers/sdd/: task-4-report.md
docs/: ai-readiness-100-plan.md  ai-readiness-map.html  ai-readiness-roi-action-plan.md  ai-readiness-score.json  architecture.md  codex-guidelines.md  implementation-plan.md  pipeline-details.md  test-strategy.md  user-flow.md  v1-beta-progress.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
docs/decisions/: ADR-004-bounded-onprem-semantic-agent.md
docs/design/: semantic-agent-architecture.md  semantic-agent-contracts-and-policies.md
docs/evaluation/: repository-analysis-baseline.md
docs/feedback/: v1-beta-feedback-template.md
docs/plans/: next-semantic-task-review.md  semantic-agent-mvp-plan.md
docs/prompts/: fable-k8s-manifest-workflow-prompt.md
docs/releases/: v1-beta-verification.md  v1.0.0-beta.1.md
docs/specs/: Architecture Decision Records.md  (+3 more)
evals/: CLAUDE.md  agent-results.json  run_evals.py
explanations/: 2026-07-13-explanation-demo-e2e-manifests.html  2026-07-13-explanation-interactive-k8s-agent-mvp.html  2026-07-13-interactive-k8s-agent-mvp-explained.md
scripts/: CLAUDE.md  ensure_kubeconform.py  validate_context_paths.py  verify-v1-beta-real-repos.sh  verify-v1-beta.sh
src/: CLAUDE.md
tests/: CLAUDE.md  test_migration_agent.py
(+454 files in other folders)
