[project]
name = "k8s-deploy-preanalyzer"
version = "0.1.0"
requires-python = ">=3.11"
description = "Deterministic pre-analysis workflow for Kubernetes manifest generation"
dependencies = [
  "jinja2>=3.1",
  "openai>=1.0",
  "PyYAML>=6.0",
  "pydantic>=2.8",
]

[project.scripts]
k8s-agent = "k8s_agent.cli:main"
preanalyzer = "preanalyzer.cli:main"
repository-agent = "migration_agent.cli.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "integration: real repositories or network-dependent tests",
  "needs_kubeconform: requires kubeconform binary",
  "needs_kubectl: requires kubectl binary",
]
addopts = "-m 'not integration'"
